[OS/2] Bug 476134: allow plugin code to be built with GCC 4.3.x on OS/2 by using the right calling convention, r=josh, sr=jst